syntax = "proto3";

package srv;

option go_package = "./pkg/srv/pb";

message RegisterRequest {
    string message = 1;
    uint64 id = 2;
}

message RegisterResponse {
    string message = 1;
}

service Service {
    rpc RegisterWorker(RegisterRequest) returns (RegisterResponse);
}